chore: temp fix for overflow

--- a/globals.css
+++ b/globals.css
@@ -2,9 +2,17 @@
 
 html {
     overflow-x: hidden;
+    background-color: #264B19;
 }
+
+/* html *{
+    overflow-x: hidden;
+    overflow-y: visible;
+} */
+
 body {
-    margin: 0
+    margin: 0;
+    background-color: white;
 }
 
 body * {
@@ -13,4 +21,12 @@ body * {
 
 h1 {
     font-size: 1.5rem;
+}
+
+@media only screen and (min-width: 768px) {
+    body {
+        width: 50%;
+        margin: auto;
+        border: 1px solid white;
+    }
 }
